<resources>
    <string name="app_name">test_mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture_text">profile_picture</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="description_hint">Description</string>
    <string name="add_text">Add</string>
    <string name="add_new_employee_title">ADD NEW EMPLOYEE</string>
</resources>